--- a/css/index.css
+++ b/css/index.css
@@ -83,7 +83,7 @@
 .p2f{
     background-color: darkgray;
     box-shadow: 0px 0px 10px 10px grey;
-    margin: 240px 20px 35px 750px;
+    margin: 240px 20px 35px 1300px;
 }
 
 .video1f{
@@ -95,6 +95,17 @@
     box-shadow: 0px 0px 0px 10px black;
     width: 600px; 
     height: 300px;
+    
+}
+.video2f{
+    margin: -1000px 80px 220px 20px;
+    padding: 1px 0 0 0 ;
+    /* border:  15px rgb(0, 0, 0);
+    border-style: groove;
+    border-radius: 30px;
+    box-shadow: 0px 0px 0px 10px black; */
+    width: 180px; 
+    height: 350px;
     
 }
 .img1f{
